1. Метод .of [#495772]